[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://game/enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://game/enemies/projectiles_spawner.gd" type="Script" id=3]
[ext_resource path="res://game/other/projectile.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 28 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "test",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 960, 540 )
script = ExtResource( 2 )
projectiles_quantity = 8
shots_per_sec = 2.0

[node name="ProjectilesSpawner" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Projectile" parent="ProjectilesSpawner" instance=ExtResource( 4 )]
position = Vector2( 80, 56 )

[node name="Sprite" parent="ProjectilesSpawner/Projectile" index="0"]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.33, 0.33 )

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.780392, 0.215686, 0.215686, 1 )
rotation = -3.14159
frames = SubResource( 1 )
animation = "test"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FiringTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_FiringTimer_timeout"]

[editable path="ProjectilesSpawner/Projectile"]
